[project]
name = "pipe-cleaner"
version = "0.1.0"
description = ""
authors = [
    {name = "Maciej Katafiasz", email = "mathrick@disroot.org"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pipe (>=2.2,<3.0)"
]

[tool.poetry]
packages = [{include = "pipe_cleaner", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
