[project]
name = "pipe-cleaner"
version = "0.1.2"
description = "A library of common extensions to Pipe"
authors = [
    {name = "Maciej Katafiasz", email = "mathrick@disroot.org"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pipe (>=2.2,<3.0)"
]
dynamic = [ "classifiers" ]

[project.urls]
source = "https://github.com/mathrick/pipe-cleaner"

[tool.poetry]
packages = [{include = "pipe_cleaner", from = "src"}]
classifiers = [
    "Topic :: Software Development :: Libraries"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
