[project]
name = "pipe-cleaner"
version = "0.1.3"
description = "A library of common extensions to Pipe"
authors = [
    {name = "Maciej Katafiasz", email = "mathrick@disroot.org"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pipe (>=2.2,<3.0)"
]
dynamic = [ "classifiers" ]

[project.urls]
source = "https://github.com/mathrick/pipe-cleaner"

[tool.poetry]
packages = [{include = "pipe_cleaner", from = "src"}]
classifiers = [
    "Topic :: Software Development :: Libraries"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "myst-parser (<5.0)",
    "furo (<2025.12.19)",
    "sphinx (<9.1.0)",
    "sphinx-autodoc2 (>=0.5.0,<0.6.0)",
]
